--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "exercicios_react",
+  "name": "aula__react",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --progress --colors --inline --hot"
@@ -11,15 +12,12 @@
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
-  },
-  "dependencies": {
-    "create-react-app": "^1.5.2"
-  },
-  "description": ""
+  }
 }
